force-app/main/default/objects/Schedule_Unavailability__c/Schedule_Unavailability__c.object-meta.xml
<CustomObject>
    <description>Provider time off or blocked window. Optional Schedule scopes the block to one location; blank applies to all schedules for the practitioner.</description>
    <label>Schedule Unavailability</label>
    <nameField>
        <displayFormat>UNA-{00000000}</displayFormat>
        <label>Unavailability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Unavailabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>