force-app/main/default/objects/Schedule_Unavailability__c/fields/All_Day__c.field-meta.xml
<CustomField>
    <fullName>All_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Day</label>
    <type>Checkbox</type>
</CustomField>