force-app/main/default/objects/Schedule_Unavailability__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <label>End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>