force-app/main/default/objects/Schedule_Unavailability__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>Unavailabilities</relationshipLabel>
    <relationshipName>Unavailabilities</relationshipName>
    <type>Lookup</type>
</CustomField>