force-app/main/default/objects/Schedule_Unavailability__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Practitioner__c</columns>
    <columns>Schedule__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Reason__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>