force-app/main/default/objects/Schedule_Unavailability__c/listViews/Upcoming.listView-meta.xml
<ListView>
    <fullName>Upcoming</fullName>
    <columns>NAME</columns>
    <columns>Practitioner__c</columns>
    <columns>Schedule__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>End__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming</label>
</ListView>